# astrom

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: a85394be25a1_initial_migration.py
src/: database.py  main.py  models.py  schemas.py  validators.py
src/routers/: employees.py
src/templates/: employee_form.html  employees.html
tests/: test_main.py
